--- a/src/iBlogs.Site.Web/Areas/Admin/Views/Layout/Layout.cshtml
+++ b/src/iBlogs.Site.Web/Areas/Admin/Views/Layout/Layout.cshtml
@@ -38,6 +38,20 @@
             <script src="@ViewService.cdnURL()/plugins/respond.js/1.3.0/respond.min.js"></script>
         <![endif]-->
     }
+    <script src="@ViewService.cdnURL()/plugins/jquery/3.2.1/jquery.min.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/md5/md5.min.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/dashborad/detect.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/dashborad/fastclick.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/dashborad/wow.min.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/dashborad/jquery.slimscroll.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/limonte-sweetalert2/6.4.1/sweetalert2.min.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/axios/axios.min.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/vue/vue.min.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/moment/moment.min.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/vue-loading/vue-loading.min.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/dashborad/jquery.app.js" asp-append-version="true"></script>
+    <script src="@ViewService.cdnURL()/js/base.js" asp-append-version="true"></script>
 
 
 </head>
@@ -93,7 +107,7 @@
                 <div id="sidebar-menu">
                     <ul>
                         <li class=@(ViewService.active=="home"?"active":"")>
-                            <a href="/admin/index" class="waves-effect @(ViewService.active=="home"?"active":"")">
+                            <a href="/admin/home" class="waves-effect @(ViewService.active=="home"?"active":"")">
                                 <i class="fa fa-dashboard" aria-hidden="true"></i><span> 仪表盘 </span>
                             </a>
                         </li>
@@ -174,108 +188,5 @@
             </div>
         </div>
     </div>
-    <script src="@ViewService.cdnURL()/plugins/jquery/3.2.1/jquery.min.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/md5/md5.min.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/dashborad/detect.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/dashborad/fastclick.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/dashborad/wow.min.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/dashborad/jquery.slimscroll.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/limonte-sweetalert2/6.4.1/sweetalert2.min.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/axios/axios.min.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/vue/vue.min.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/moment/moment.min.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/vue-loading/vue-loading.min.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/dashborad/jquery.app.js" asp-append-version="true"></script>
-    <script src="@ViewService.cdnURL()/js/base.js" asp-append-version="true"></script>
-    <script>
-        var tale = new $.tale();
-        var vm = new Vue({
-            el: '#app',
-            data: {
-                logPage: {},
-                comments: [],
-                isLoading: true
-            },
-            beforeCreate: function () {
-                vueLoding = this.$loading.show();
-            },
-            mounted: function () {
-                this.load(1);
-            },
-            methods: {
-                load: function (page) {
-                    var $vm = this;
-                    tale.get({
-                        url: '/admin/api/logs',
-                        data: {
-                            page: page,
-                            limit: 8
-                        },
-                        success: function (data) {
-                            $vm.logPage = data.payload;
-                        },
-                        error: function (error) {
-                            console.log(error);
-                            alert(error || '数据加载失败');
-                        }
-                    });
-                    tale.get({
-                        url: '/admin/api/comments',
-                        success: function (data) {
-                            if (!data.payload.rows) {
-                                $vm.comments = [];
-                            } else {
-                                $vm.comments = data.payload.rows;
-                            }
-                        },
-                        error: function (error) {
-                            console.log(error);
-                            alert(error || '数据加载失败');
-                        }
-                    });
-                },
-                audit: function (coid, status) {
-                    var $vm = this;
-                    tale.post({
-                        url: '/admin/api/comment/status',
-                        data: { coid: coid, status: status },
-                        success: function (result) {
-                            if (result && result.success) {
-                                tale.alertOk('已通过');
-                                $vm.load();
-                            } else {
-                                tale.alertError(result.msg || '评论设置失败');
-                            }
-                        }
-                    });
-                },
-                deleteComment: function (coid) {
-                    var $vm = this;
-                    tale.alertConfirm({
-                        title: '确定删除该评论吗?',
-                        then: function () {
-                            tale.post({
-                                url: '/admin/api/comment/delete/' + coid,
-                                success: function (result) {
-                                    if (result && result.success) {
-                                        tale.alertOk('评论删除成功');
-                                        $vm.load();
-                                    } else {
-                                        tale.alertError(result.msg || '评论删除失败');
-                                    }
-                                }
-                            });
-                        }
-                    });
-                }
-            }
-        });
-
-        $(document).ready(function () {
-            vm.isLoading = false;
-            vueLoding.hide();
-        });
-    </script>
 </body>
 </html>
