--- a/src/iBlogs.Site.Web/Areas/Admin/Views/Article/New.cshtml
+++ b/src/iBlogs.Site.Web/Areas/Admin/Views/Article/New.cshtml
@@ -1,4 +1,101 @@
-﻿<div id="app" class="row" v-cloak>
+﻿@using iBlogs.Site.Core.Service.Common
+@inject IViewService ViewService
+@section scripts
+{
+    <script src="@ViewService.cdnURL()/plugins/tagsinput/jquery.tagsinput.min.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/datetimepicker/bootstrap-datetimepicker.min.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/datetimepicker/bootstrap-datetimepicker.zh-CN.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/jquery-multi-select/jquery.quicksearch.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/mditor/js/mditor.min.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/wysihtml5/0.3.0/wysihtml5.min.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/summernote/0.8.2/summernote.min.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/summernote/0.8.2/lang/summernote-zh-CN.min.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/vue-select/vue-select.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/jquery-toggles/2.0.4/toggles.min.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/dropzone/4.3.0/min/dropzone.min.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/to-markdown/3.1.0/to-markdown.min.js"></script>
+    <script src="/static/admin/js/new_article.js" asp-append-version="true"></script>
+}
+<link href="@ViewService.cdnURL()/plugins/tagsinput/jquery.tagsinput.css" rel="stylesheet">
+<link href="@ViewService.cdnURL()/plugins/toggles/toggles.css" rel="stylesheet">
+<link href="@ViewService.cdnURL()/plugins/datetimepicker/bootstrap-datetimepicker.min.css" rel="stylesheet">
+<link href="@ViewService.cdnURL()/plugins/mditor/css/mditor.min.css" rel="stylesheet" />
+<link href="@ViewService.cdnURL()/plugins/summernote/0.8.2/summernote.css" rel="stylesheet">
+<link href="@ViewService.cdnURL()/plugins/dropzone/4.3.0/min/dropzone.min.css" rel="stylesheet">
+
+<style rel="stylesheet">
+    #tags_tagsinput {
+        background-color: #fafafa;
+        border: 1px solid #eeeeee;
+    }
+
+    #tags_addTag input {
+        width: 100%;
+    }
+
+    #tags_addTag {
+        margin-top: -5px;
+    }
+
+    .mditor .editor {
+        font-size: 14px;
+        font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    }
+
+    .mditor .backdrop, .mditor .textarea, .mditor .viewer {
+        font-size: 14px;
+    }
+
+    .markdown-body {
+        font-size: 14px;
+    }
+
+    .note-toolbar {
+        text-align: center;
+    }
+
+    .note-editor.note-frame {
+        border: none;
+    }
+
+    .note-editor .note-toolbar {
+        background-color: #f5f5f5;
+        padding-bottom: 10px;
+    }
+
+    .note-toolbar .note-btn-group {
+        margin: 0;
+    }
+
+    .note-toolbar .note-btn {
+        border: none;
+    }
+
+    #articleForm #dropzone {
+        min-height: 200px;
+        background-color: #dbdde0;
+        line-height: 200px;
+        margin-bottom: 10px;
+    }
+
+    #articleForm .dropzone {
+        border: 1px dashed #8662c6;
+        border-radius: 5px;
+        background: white;
+    }
+
+        #articleForm .dropzone .dz-message {
+            font-weight: 400;
+        }
+
+            #articleForm .dropzone .dz-message .note {
+                font-size: 0.8em;
+                font-weight: 200;
+                display: block;
+                margin-top: 1.4rem;
+            }
+</style>
+<div id="app" class="row" v-cloak>
     <loading :active.sync="isLoading" :can-cancel="true"></loading>
     <div class="col-lg-12">
         <div class="panel panel-primary">
@@ -114,4 +211,3 @@
         </div>
     </div>
 </div>
-<script src="/static/admin/js/new_article.js" asp-append-version="true"></script>
