--- a/src/iBlogs.Site.Web/Areas/Admin/Views/Home/Index.cshtml
+++ b/src/iBlogs.Site.Web/Areas/Admin/Views/Home/Index.cshtml
@@ -2,7 +2,99 @@
 @using iBlogs.Site.Core.Utils
 @inject IViewService ViewService
 @*@(ViewService.active="home")
-@(ViewService.title="管理中心")*@
+    @(ViewService.title="管理中心")*@
+@section scripts
+{
+    <script>
+        var tale = new $.tale();
+        var vm = new Vue({
+            el: '#app',
+            data: {
+                logPage: {},
+                comments: [],
+                isLoading: true
+            },
+            beforeCreate: function () {
+                vueLoding = this.$loading.show();
+            },
+            mounted: function () {
+                this.load(1);
+            },
+            methods: {
+                load: function (page) {
+                    var $vm = this;
+                    tale.get({
+                        url: '/admin/api/logs',
+                        data: {
+                            page: page,
+                            limit: 8
+                        },
+                        success: function (data) {
+                            $vm.logPage = data.payload
+                        },
+                        error: function (error) {
+                            console.log(error);
+                            alert(error || '数据加载失败');
+                        }
+                    });
+                    tale.get({
+                        url: '/admin/api/comments',
+                        success: function (data) {
+                            if (!data.payload.rows) {
+                                $vm.comments = [];
+                            } else {
+                                $vm.comments = data.payload.rows;
+                            }
+                        },
+                        error: function (error) {
+                            console.log(error);
+                            alert(error || '数据加载失败');
+                        }
+                    });
+                },
+                audit: function (coid, status) {
+                    var $vm = this;
+                    tale.post({
+                        url: '/admin/api/comment/status',
+                        data: { coid: coid, status: status },
+                        success: function (result) {
+                            if (result && result.success) {
+                                tale.alertOk('已通过');
+                                $vm.load();
+                            } else {
+                                tale.alertError(result.msg || '评论设置失败');
+                            }
+                        }
+                    });
+                },
+                deleteComment: function (coid) {
+                    var $vm = this;
+                    tale.alertConfirm({
+                        title: '确定删除该评论吗?',
+                        then: function () {
+                            tale.post({
+                                url: '/admin/api/comment/delete/' + coid,
+                                success: function (result) {
+                                    if (result && result.success) {
+                                        tale.alertOk('评论删除成功');
+                                        $vm.load();
+                                    } else {
+                                        tale.alertError(result.msg || '评论删除失败');
+                                    }
+                                }
+                            });
+                        }
+                    });
+                }
+            }
+        });
+
+        $(document).ready(function () {
+            vm.isLoading = false;
+            vueLoding.hide();
+        });
+    </script>
+}
 <div id="app" class="row" v-cloak>
     <loading :active.sync="isLoading" :can-cancel="true"></loading>
     <div class="col-lg-12">
@@ -128,92 +220,3 @@
         </div>
     </div>
 </div>
-<script>
-    //var tale = new $.tale();
-    //var vm = new Vue({
-    //    el: '#app',
-    //    data: {
-    //        logPage: {},
-    //        comments: [],
-    //        isLoading: true
-    //    },
-    //    beforeCreate: function () {
-    //        vueLoding = this.$loading.show();
-    //    },
-    //    mounted: function () {
-    //        this.load(1);
-    //    },
-    //    methods: {
-    //        load: function (page) {
-    //            var $vm = this;
-    //            tale.get({
-    //                url: '/admin/api/logs',
-    //                data: {
-    //                    page: page,
-    //                    limit: 8
-    //                },
-    //                success: function (data) {
-    //                    $vm.logPage = data.payload
-    //                },
-    //                error: function (error) {
-    //                    console.log(error);
-    //                    alert(error || '数据加载失败');
-    //                }
-    //            });
-    //            tale.get({
-    //                url: '/admin/api/comments',
-    //                success: function (data) {
-    //                    if (!data.payload.rows) {
-    //                        $vm.comments = [];
-    //                    } else {
-    //                        $vm.comments = data.payload.rows;
-    //                    }
-    //                },
-    //                error: function (error) {
-    //                    console.log(error);
-    //                    alert(error || '数据加载失败');
-    //                }
-    //            });
-    //        },
-    //        audit: function (coid, status) {
-    //            var $vm = this;
-    //            tale.post({
-    //                url: '/admin/api/comment/status',
-    //                data: { coid: coid, status: status },
-    //                success: function (result) {
-    //                    if (result && result.success) {
-    //                        tale.alertOk('已通过');
-    //                        $vm.load();
-    //                    } else {
-    //                        tale.alertError(result.msg || '评论设置失败');
-    //                    }
-    //                }
-    //            });
-    //        },
-    //        deleteComment: function (coid) {
-    //            var $vm = this;
-    //            tale.alertConfirm({
-    //                title: '确定删除该评论吗?',
-    //                then: function () {
-    //                    tale.post({
-    //                        url: '/admin/api/comment/delete/' + coid,
-    //                        success: function (result) {
-    //                            if (result && result.success) {
-    //                                tale.alertOk('评论删除成功');
-    //                                $vm.load();
-    //                            } else {
-    //                                tale.alertError(result.msg || '评论删除失败');
-    //                            }
-    //                        }
-    //                    });
-    //                }
-    //            });
-    //        }
-    //    }
-    //});
-
-    //$(document).ready(function () {
-    //    vm.isLoading = false;
-    //    vueLoding.hide();
-    //});
-</script>
