--- a/src/iBlogs.Site.Web/Areas/Admin/Views/Layout/Layout.cshtml
+++ b/src/iBlogs.Site.Web/Areas/Admin/Views/Layout/Layout.cshtml
@@ -38,22 +38,6 @@
             <script src="@ViewService.cdnURL()/plugins/respond.js/1.3.0/respond.min.js"></script>
         <![endif]-->
     }
-    <script src="@ViewService.cdnURL()/plugins/jquery/3.2.1/jquery.min.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/md5/md5.min.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/dashborad/detect.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/dashborad/fastclick.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/dashborad/wow.min.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/dashborad/jquery.slimscroll.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/limonte-sweetalert2/6.4.1/sweetalert2.min.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/axios/axios.min.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/vue/vue.min.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/moment/moment.min.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/vue-loading/vue-loading.min.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/dashborad/jquery.app.js" asp-append-version="true"></script>
-    <script src="@ViewService.cdnURL()/js/base.js" asp-append-version="true"></script>
-
-
 </head>
 <body class="fixed-left">
     <div id="wrapper">
@@ -117,7 +101,7 @@
                             </a>
                         </li>
                         <li @(ViewService.active == "articles" ? "active" : "")>
-                            <a href="/admin/articles" class="waves-effect  @(ViewService.active=="articles"?"active":"")">
+                            <a href="/admin/article" class="waves-effect  @(ViewService.active=="articles"?"active":"")">
                                 <i class="fa fa-list" aria-hidden="true"></i><span> 文章管理 </span>
                             </a>
                         </li>
@@ -188,5 +172,20 @@
             </div>
         </div>
     </div>
+    <script src="@ViewService.cdnURL()/plugins/jquery/3.2.1/jquery.min.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/md5/md5.min.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/dashborad/detect.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/dashborad/fastclick.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/dashborad/wow.min.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/dashborad/jquery.slimscroll.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/limonte-sweetalert2/6.4.1/sweetalert2.min.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/axios/axios.min.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/vue/vue.min.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/moment/moment.min.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/vue-loading/vue-loading.min.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/dashborad/jquery.app.js" asp-append-version="true"></script>
+    <script src="@ViewService.cdnURL()/js/base.js" asp-append-version="true"></script>
+    @RenderSection("scripts", required: false)
 </body>
 </html>
