--- a/src/iBlogs.Site.Web/Areas/Admin/Views/Article/Index.cshtml
+++ b/src/iBlogs.Site.Web/Areas/Admin/Views/Article/Index.cshtml
@@ -134,9 +134,9 @@
                 loadOnce: function () {
                     var $vm = this;
                     tale.get({
-                        url: '/admin/api/categories',
+                        url: '/admin/api/CategoryList',
                         success: function (data) {
-                            $vm.categories = data.payload
+                            $vm.categories = data.payload;
                         },
                         error: function (error) {
                             console.log(error);
@@ -149,7 +149,7 @@
                     $vm.search.page = page;
 
                     tale.get({
-                        url: '/admin/api/articles',
+                        url: '/admin/api/articleList',
                         data: $vm.search,
                         success: function (data) {
                             $vm.articlePage = data.payload
