--- a/src/iBlogs.Site.Web/Areas/Admin/Views/Categories/Index.cshtml
+++ b/src/iBlogs.Site.Web/Areas/Admin/Views/Categories/Index.cshtml
@@ -26,10 +26,10 @@
                                     </button>
                                     <ul class="dropdown-menu" role="menu">
                                         <li>
-                                            <a class="edit-category" click="edit(index)">修改</a>
+                                            <a class="edit-category" v-on:click="edit(index)">修改</a>
                                         </li>
                                         <li>
-                                            <a class="del-category" click="deleteCategory(item.mid)">删除</a>
+                                            <a class="del-category" v-on:click="deleteCategory(item.mid)">删除</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -49,7 +49,7 @@
                                     </button>
                                     &nbsp;
                                     <ul class="dropdown-menu" role="menu">
-                                        <li><a class="del-category" click="deleteCategory(item.mid)">删除</a></li>
+                                        <li><a class="del-category" v-on:click="deleteCategory(item.mid)">删除</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -66,7 +66,7 @@
                                     <div class="form-group">
                                         <input type="text" class="form-control" v-model="cname" placeholder="请输入分类名称">
                                     </div>
-                                    <button type="button" class="btn btn-success waves-effect waves-light m-l-10" click="save">
+                                    <button type="button" class="btn btn-success waves-effect waves-light m-l-10" v-on:click="save">
                                         保存分类
                                     </button>
                                 </form>
@@ -102,7 +102,7 @@
                 load: function () {
                     var $vm = this;
                     tale.get({
-                        url: '/admin/api/categories',
+                        url: '/admin/api/CategoryList',
                         success: function (data) {
                             $vm.categories = data.payload
                         },
@@ -112,7 +112,7 @@
                         }
                     });
                     tale.get({
-                        url: '/admin/api/tags',
+                        url: '/admin/api/TagList',
                         success: function (data) {
                             $vm.tags = data.payload
                         },
