--- a/src/iBlogs.Site.Web/Areas/Admin/Views/Layout/Layout.cshtml
+++ b/src/iBlogs.Site.Web/Areas/Admin/Views/Layout/Layout.cshtml
@@ -78,7 +78,7 @@
                                         </a>
                                     </li>
                                     <li><a href="/admin/profile"><i class="fa fa-sun-o"></i> 个人设置</a></li>
-                                    <li><a href="/logout"><i class="fa fa-sign-out"></i> 注销</a></li>
+                                    <li><a href="/admin/login"><i class="fa fa-sign-out"></i> 注销</a></li>
                                 </ul>
                             </li>
                         </ul>
