--- a/src/iBlogs.Site.Web/Areas/Admin/Views/Article/Edit.cshtml
+++ b/src/iBlogs.Site.Web/Areas/Admin/Views/Article/Edit.cshtml
@@ -1,28 +1,13 @@
 ﻿@using iBlogs.Site.Core.Service.Common
 @inject IViewService ViewService
-@section scripts
-{
-    <script src="@ViewService.cdnURL()/plugins/tagsinput/jquery.tagsinput.min.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/datetimepicker/bootstrap-datetimepicker.min.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/datetimepicker/bootstrap-datetimepicker.zh-CN.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/jquery-multi-select/jquery.quicksearch.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/mditor/js/mditor.min.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/wysihtml5/0.3.0/wysihtml5.min.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/summernote/0.8.2/summernote.min.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/summernote/0.8.2/lang/summernote-zh-CN.min.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/vue-select/vue-select.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/jquery-toggles/2.0.4/toggles.min.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/dropzone/4.3.0/min/dropzone.min.js"></script>
-    <script src="@ViewService.cdnURL()/plugins/to-markdown/3.1.0/to-markdown.min.js"></script>
-    <script src="/static/admin/js/new_article.js" asp-append-version="true"></script>
-}
+
+
 <link href="@ViewService.cdnURL()/plugins/tagsinput/jquery.tagsinput.css" rel="stylesheet">
 <link href="@ViewService.cdnURL()/plugins/toggles/toggles.css" rel="stylesheet">
 <link href="@ViewService.cdnURL()/plugins/datetimepicker/bootstrap-datetimepicker.min.css" rel="stylesheet">
 <link href="@ViewService.cdnURL()/plugins/mditor/css/mditor.min.css" rel="stylesheet" />
 <link href="@ViewService.cdnURL()/plugins/summernote/0.8.2/summernote.css" rel="stylesheet">
 <link href="@ViewService.cdnURL()/plugins/dropzone/4.3.0/min/dropzone.min.css" rel="stylesheet">
-
 <style rel="stylesheet">
     #tags_tagsinput {
         background-color: #fafafa;
@@ -100,19 +85,18 @@
     <div class="col-lg-12">
         <div class="panel panel-primary">
             <div class="panel-heading">
-                <h3 class="panel-title">发布文章</h3>
+                <h3 class="panel-title">编辑文章</h3>
             </div>
             <div class="panel-body">
                 <input type="hidden" id="attach_url" value="${attachURL()}" />
+
                 <form id="articleForm">
                     <input type="hidden" v-model="article.cid" />
-                    <input type="hidden" v-model="article.created" />
                     <input type="hidden" v-model="article.status" />
                     <input type="hidden" v-model="article.allowComment" />
                     <input type="hidden" v-model="article.allowPing" />
                     <input type="hidden" v-model="article.allowFeed" />
                     <input type="hidden" v-model="article.fmtType" />
-                    <input type="hidden" v-model="article.tags" />
 
                     <div class="form-group col-md-6" style="padding: 0 10px 0 0;">
                         <input class="form-control" placeholder="请输入文章标题（必须）" v-model="article.title" required />
@@ -123,7 +107,7 @@
                     </div>
 
                     <div class="form-group col-md-6" style="padding: 0 10px 0 0;">
-                        <input id="tags" type="text" class="form-control" placeholder="请填写文章标签" />
+                        <input id="tags" type="text" class="form-control" placeholder="请填写文章标签" v-model="article.tags" />
                     </div>
 
                     <div class="form-group col-md-6">
@@ -134,9 +118,9 @@
 
                     <div class="form-group col-xs-12">
                         <div class="pull-right">
-                            <button class="btn btn-purple btn-sm waves-effect waves-light switch-editor" click="switchEditor">
+                            <a class="btn btn-purple btn-sm waves-effect waves-light switch-editor" v-on:click="switchEditor">
                                 切换为富文本编辑器
-                            </button>
+                            </a>
                         </div>
                     </div>
 
@@ -147,28 +131,28 @@
                         <div class="summernote"></div>
                     </div>
 
-                    <div class="form-group col-md-3 col-xs-4">
+                    <div class="form-group col-md-3 col-sm-4">
                         <label class="col-sm-4">开启评论</label>
                         <div class="col-sm-8">
                             <div id="allowComment" class="toggle toggle-success"></div>
                         </div>
                     </div>
 
-                    <div class="form-group col-md-3 col-xs-4">
+                    <div class="form-group col-md-3 col-sm-4">
                         <label class="col-sm-4">允许Ping</label>
                         <div class="col-sm-8">
                             <div id="allowPing" class="toggle toggle-success"></div>
                         </div>
                     </div>
 
-                    <div class="form-group col-md-3 col-xs-4">
+                    <div class="form-group col-md-3 col-sm-4">
                         <label class="col-sm-4">允许订阅</label>
                         <div class="col-sm-8">
                             <div id="allowFeed" class="toggle toggle-success"></div>
                         </div>
                     </div>
 
-                    <div class="form-group col-md-3 col-xs-12">
+                    <div class="form-group col-md-3">
                         <label class="col-sm-5">添加缩略图</label>
                         <div class="col-sm-7">
                             <div id="addThumb" class="toggle toggle-success"></div>
@@ -211,3 +195,19 @@
         </div>
     </div>
 </div>
+@section scripts
+{
+    <script src="@ViewService.cdnURL()/plugins/tagsinput/jquery.tagsinput.min.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/datetimepicker/bootstrap-datetimepicker.min.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/datetimepicker/bootstrap-datetimepicker.zh-CN.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/jquery-multi-select/jquery.quicksearch.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/mditor/js/mditor.min.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/wysihtml5/0.3.0/wysihtml5.min.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/summernote/0.8.2/summernote.min.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/summernote/0.8.2/lang/summernote-zh-CN.min.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/vue-select/vue-select.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/jquery-toggles/2.0.4/toggles.min.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/dropzone/4.3.0/min/dropzone.min.js"></script>
+    <script src="@ViewService.cdnURL()/plugins/to-markdown/3.1.0/to-markdown.min.js"></script>
+    <script src="/static/admin/js/edit_article.js" asp-append-version="true"></script>
+}
