--- a/src/iBlogs.Site.Web/Areas/Admin/Views/Article/Edit.cshtml
+++ b/src/iBlogs.Site.Web/Areas/Admin/Views/Article/Edit.cshtml
@@ -181,7 +181,7 @@
 
                     <div class="form-group col-md-6">
                         <div class="text-right">
-                            <a class="btn btn-default waves-effect waves-light" href="/admin/articles">返回列表</a>
+                            <a class="btn btn-default waves-effect waves-light" href="/admin/article">返回列表</a>
                             <button type="button" class="btn btn-primary waves-effect waves-light" v-on:click="publish('publish')">
                                 发布文章
                             </button>
