--- a/src/iBlogs.Site.Web/Areas/Admin/Views/Article/Edit.cshtml
+++ b/src/iBlogs.Site.Web/Areas/Admin/Views/Article/Edit.cshtml
@@ -88,7 +88,7 @@
                 <h3 class="panel-title">编辑文章</h3>
             </div>
             <div class="panel-body">
-                <input type="hidden" id="attach_url" value="${attachURL()}" />
+                <input type="hidden" id="attach_url" value="@ViewService.attachURL()" />
 
                 <form id="articleForm">
                     <input type="hidden" v-model="article.cid" />
