--- a/src/iBlogs.Site.Web/Views/Article/Index.cshtml
+++ b/src/iBlogs.Site.Web/Views/Article/Index.cshtml
@@ -43,7 +43,7 @@
 @{
     var article = ViewService.current_article();
     var comments = ViewService.comments(6);
-    <div id="@article.Cid" class="comment-container">
+    <div id="@article.Id" class="comment-container">
         <div id="comments" class="clearfix">
             @if (article.AllowComment)
             {
@@ -79,8 +79,8 @@
                 <ol class="comment-list">
                     @foreach (var comment in comments.rows)
                     {
-                        <li id="li-comment-@comment.Coid" class="comment-body comment-parent comment-odd">
-                            <div id="comment-@comment.Coid}">
+                        <li id="li-comment-@comment.Id" class="comment-body comment-parent comment-odd">
+                            <div id="comment-@comment.Id}">
                                 <div class="comment-view" onclick="">
                                     <div class="comment-header">
                                         <img class="avatar" src="@ViewService.gravatar(comment.Mail)}?s=80&r=G&d=" title="@comment.Author}"
@@ -96,7 +96,7 @@
                                     <div class="comment-meta">
                                         <time class="comment-time">@ViewService.fmtdate(comment.Created.Value)</time>
                                         <span class="comment-reply">
-                                            <a rel="nofollow" onclick="TaleComment.reply('@comment.Coid');">回复</a>
+                                            <a rel="nofollow" onclick="TaleComment.reply('@comment.Id');">回复</a>
                                         </span>
                                     </div>
                                 </div>
@@ -107,9 +107,9 @@
                                     <ol class="comment-list">
                                         @foreach (var child in comment.children)
                                         {
-                                            <li id="li-comment-@child.Coid"
+                                            <li id="li-comment-@child.Id"
                                                 class="comment-body comment-child comment-level-odd comment-odd">
-                                                <div id="comment-@child.Coid">
+                                                <div id="comment-@child.Id">
                                                     <div class="comment-view">
                                                         <div class="comment-header">
                                                             <img class="avatar" src="@ViewService.gravatar(child.Mail)?s=80&r=G&d=" title="@child.Author" width="80" height="80">
@@ -126,7 +126,7 @@
                                                         <div class="comment-meta">
                                                             <time class="comment-time">@ViewService.fmtdate(child.Created.Value)</time>
                                                             <span class="comment-reply">
-                                                                <a rel="nofollow" onclick="TaleComment.reply('@child.Coid');">回复</a>
+                                                                <a rel="nofollow" onclick="TaleComment.reply('@child.Id');">回复</a>
                                                             </span>
                                                         </div>
                                                     </div>
