--- a/src/iBlogs.Site.Web/Areas/Admin/Views/Attaches/Index.cshtml
+++ b/src/iBlogs.Site.Web/Areas/Admin/Views/Attaches/Index.cshtml
@@ -222,7 +222,7 @@
             }
         });
 
-        clipboard.on('success', function (e) {
+        clipboard.on('SetSuccess', function (e) {
             console.info('Action:', e.action);
             console.info('Text:', e.text);
             console.info('Trigger:', e.trigger);
