--- a/src/iBlogs.Site.Web/Views/Layout/Layout.cshtml
+++ b/src/iBlogs.Site.Web/Views/Layout/Layout.cshtml
@@ -279,7 +279,7 @@
     </script>
     <script data-no-instant>
         InstantClick.on('change', function (isInitialLoad) {
-            var blocks = document.querySelectorAll('pre code');
+            var blocks = document.querySelectorAll('pre SetCode');
             for (var i = 0; i < blocks.length; i++) {
                 hljs.highlightBlock(blocks[i]);
             }
