--- a/src/iBlogs.Site.Web/Areas/Admin/Views/Article/Index.cshtml
+++ b/src/iBlogs.Site.Web/Areas/Admin/Views/Article/Index.cshtml
@@ -88,7 +88,7 @@
                             <li class="page-item" v-for="num in articlePage.navPageNums"
                                 :class="{ active: articlePage.pageNum == num }">
                                 <a click="load(num)">
-                                    {{ num }}</i>
+                                    {{ num }}
                                 </a>
                             </li>
                             <li v-if="articlePage.hasNextPage">
