--- a/src/iBlogs.Site.Web/Views/Layout/Layout.cshtml
+++ b/src/iBlogs.Site.Web/Views/Layout/Layout.cshtml
@@ -1,6 +1,5 @@
-﻿@using System.Net.Http
-@using iBlogs.Site.Core.Common.Service
-@using iBlogs.Site.Core.Extensions
+﻿@using iBlogs.Site.Core.Common.Service
+@using iBlogs.Site.Core.Common.Extensions
 @inject IViewService ViewService
 <!DOCTYPE html>
 <html>
