--- a/src/iBlogs.Site.Web/Areas/Admin/Views/Article/New.cshtml
+++ b/src/iBlogs.Site.Web/Areas/Admin/Views/Article/New.cshtml
@@ -103,9 +103,9 @@
                 <h3 class="panel-title">发布文章</h3>
             </div>
             <div class="panel-body">
-                <input type="hidden" id="attach_url" value="${attachURL()}" />
+                <input type="hidden" id="attach_url" value="@ViewService.attachURL()" />
                 <form id="articleForm">
-                    <input type="hidden" v-model="article.cid" />
+                    <input type="hidden" v-model="article.id" />
                     <input type="hidden" v-model="article.created" />
                     <input type="hidden" v-model="article.status" />
                     <input type="hidden" v-model="article.allowCommentDto" />
