--- a/src/iBlogs.Site.Web/Areas/Admin/Views/Home/Index.cshtml
+++ b/src/iBlogs.Site.Web/Areas/Admin/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@using iBlogs.Site.Core.Common
 @using iBlogs.Site.Core.Common.Service
 @inject IViewService ViewService
+@model AdminIndexModel
 @section scripts
 {
     <script>
@@ -109,7 +110,7 @@
                                 <span class="mini-stat-icon"><i class="fa fa-quote-right" aria-hidden="true"></i></span>
                             </a>
                             <div class="mini-stat-info text-right">
-                                发表了<span class="counter">@statistics.articles</span>篇文章
+                                发表了<span class="counter">@Model.ArticlesCount</span>篇文章
                             </div>
                         </div>
                     </div>
@@ -119,7 +120,7 @@
                                 <span class="mini-stat-icon"><i class="fa fa-comments-o" aria-hidden="true"></i></span>
                             </a>
                             <div class="mini-stat-info text-right">
-                                收到了<span class="counter">@statistics.comments</span>条留言
+                                收到了<span class="counter">@Model.CommentsCount</span>条留言
                             </div>
                         </div>
                     </div>
@@ -130,7 +131,7 @@
                                 <span class="mini-stat-icon"><i class="fa fa-cloud-upload" aria-hidden="true"></i></span>
                             </a>
                             <div class="mini-stat-info text-right">
-                                上传了<span class="counter">@statistics.attachs</span>个附件
+                                上传了<span class="counter">@Model.AttachCount</span>个附件
                             </div>
                         </div>
                     </div>
@@ -144,13 +145,14 @@
                             </div>
                             <div class="panel-body">
                                 <ul class="list-group">
-                                    #for(item : articles)
-                                    <li class="list-group-item">
-                                        <span class="badge badge-primary"
-                                              title="${item.commentsNum}条评论">${item.commentsNum}</span>
-                                        <a target="_blank" href="${site_url('/article/')}${item.cid}">${item.title}</a>
-                                    </li>
-                                    #end
+                                    @foreach (var item in Model.Articles)
+                                    {
+                                        <li class="list-group-item">
+                                            <span class="badge badge-primary"
+                                                  title="@(item.CommentsNum)条评论">@item.CommentsNum</span>
+                                            <a target="_blank" href="/admin/article/edit/@item.Id">@item.Title</a>
+                                        </li>
+                                    }
                                 </ul>
                             </div>
                         </div>
